--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/api_marketplace
-spring.datasource.username=postgres
-spring.datasource.password=example
+spring.datasource.url=${JDBC_URL}
+spring.datasource.username=${JDBC_USER}
+spring.datasource.password=${JDBC_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=none
