--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 
 spring.jpa.hibernate.ddl-auto=none
+
+security.basic.enabled=false
+security.ignored=/**
