Implement search test case

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=example
 
 spring.jpa.hibernate.ddl-auto=none
+
+## Elasticsearch
+embedded.elasticsearch.install.enabled=true
+elasticsearch.hostAndPort =localhost:9200
