--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,8 +3,11 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:tc:postgresql:9.6.8:///api_marketplace
-spring.datasource.username=postgres
-spring.datasource.password=example
+spring.datasource.url=jdbc:postgresql://${embedded.postgresql.host}:${embedded.postgresql.port}/${embedded.postgresql.schema}
+spring.datasource.username=${embedded.postgresql.user}
+spring.datasource.password=${embedded.postgresql.password}
 
 spring.jpa.hibernate.ddl-auto=none
+
+## Elasticsearch
+elasticsearch.hostAndPort=${embedded.elasticsearch.host}:${embedded.elasticsearch.httpPort}
