--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=none
 ## Elasticsearch
 embedded.elasticsearch.install.enabled=true
 elasticsearch.hostAndPort =localhost:9200
+
+logging.level.org.elasticsearch.client=TRACE
+logging.level.org.apache.http=TRACE
