--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<spring.cloud.version>2.2.2.RELEASE</spring.cloud.version>
 		<lombok.version>1.18.12</lombok.version>
 		<testcontainers.version>1.43</testcontainers.version>
-		<jedis.version>jedis</jedis.version>
+		<jedis.version>3.3.0</jedis.version>
 		<common-lang3.version>3.10</common-lang3.version>
 	</properties>
 
@@ -35,6 +35,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
 		<dependency>
@@ -44,12 +48,6 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
