--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,15 @@ spring.datasource.password=example
 spring.jpa.hibernate.ddl-auto=none
 
 ## Elasticsearch
-embedded.elasticsearch.install.enabled=true
-elasticsearch.hostAndPort =localhost:9200
+elasticsearch.hostAndPort=localhost:9200
+
+## Redis
+##caching - redis
+spring.cache.type=redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
 
 logging.level.org.elasticsearch.client=TRACE
 logging.level.org.apache.http=TRACE
+
