--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=none
 
 ## Elasticsearch
 elasticsearch.hostAndPort=${embedded.elasticsearch.host}:${embedded.elasticsearch.httpPort}
+
+## Redis
+spring.cache.type=redis
+spring.redis.host=${embedded.redis.host}
+spring.redis.port=${embedded.redis.port}
+spring.redis.password=${embedded.redis.password}
