--- a/src/test/resources/bootstrap.properties
+++ b/src/test/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 embedded.postgresql.dockerImage=postgres:9.6.8
 embedded.elasticsearch.dockerImage=elasticsearch:7.7.1
+embedded.redis.dockerImage=redis:6-alpine
