Implement controller test

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,8 @@ spring.datasource.username=${JDBC_USER}
 spring.datasource.password=${JDBC_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=none
+
+## Loging
+logging.level.org.springframework.web=INFO
+logging.level.guru.springframework.controllers=DEBUG
+logging.level.org.hibernate=ERROR
