--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,16 @@ spring.datasource.password=${JDBC_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=none
 
+## Elasticsearch
+elasticsearch.hostAndPort=${ES_HOSTPORT}
+
+## Redis
+
+spring.cache.type=redis
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+spring.redis.password=${REDIS_PASSWORD}
+
 ## Loging
 logging.level.org.springframework.web=INFO
 logging.level.guru.springframework.controllers=DEBUG
