--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,10 @@ services:
       - discovery.seed_hosts=elasticsearch
       - cluster.initial_master_nodes=elasticsearch
       - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+
+  newman:
+    build: docker/images/newman
+    depends_on:
+      - api
+    environment:
+      HEALTH_CHECK: api:8080
