Configure logback profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.redis.port=6379
 spring.redis.password=
 
 ## Loging
+logging.config=classpath:logback.xml
 logging.level.org.elasticsearch.client=TRACE
 logging.level.org.apache.http=TRACE
 
